@@ -19,6 +19,8 @@ pipeline {
             steps {
                 checkout scm
                 script {
+                    // Fake epic for rebuild
+                    env.EPIC = "10206"
                     env.PACKAGE = "libds3v5"
                     env.PACKAGE_VERSION = "5.0.0"
 
