@@ -1,3 +1,9 @@
+libds3v5 (5.0.0-6.@distro@) @distro@; urgency=low
+
+  * Rebuild for new OS releases
+
+ -- Globus Toolkit <support@globus.org>  Fri, 12 Nov 2021 12:02:36 -0500
+
 libds3v5 (5.0.0-5.@distro@) @distro@; urgency=low
 
   * Spectra Logic's DS3 C SDK
